<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/account_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_extra_large_margin_or_padding"
            android:layout_marginRight="@dimen/default_extra_large_margin_or_padding"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LoginPrimaryTextStyle"
                android:layout_marginTop="@dimen/default_very_large_margin_or_padding"
                android:text="@string/Esegui_il_login" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login"
                style="@style/FacebookButtonStyle" />

            <Button
                android:id="@+id/sign_in_button"
                style="@style/GoogleSignInButton" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LoginSecondaryTextStyle"
                android:layout_marginBottom="@dimen/default_margin_or_padding"
                android:text="@string/oppure" />

            <com.mr_apps.androidbase.custom_views.WarningTextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    style="@style/EditTextStyle"
                    android:hint="@string/Email" />

            </com.mr_apps.androidbase.custom_views.WarningTextInputLayout>

            <com.mr_apps.androidbase.custom_views.WarningTextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    style="@style/EditTextStyle"
                    android:hint="@string/Password"
                    android:inputType="textPassword" />

            </com.mr_apps.androidbase.custom_views.WarningTextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login"
                style="@style/LoginButtonStyle"
                android:text="@string/Entra" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forget_pwd"
                style="@style/LoginSecondaryTextStyle"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="@dimen/default_margin_or_padding"
                android:background="?attr/selectableItemBackground"
                android:paddingBottom="@dimen/default_margin_or_padding"
                android:paddingLeft="@dimen/default_margin_or_padding"
                android:paddingRight="@dimen/default_margin_or_padding"
                android:paddingTop="@dimen/default_margin_or_padding"
                android:text="@string/Password_dimenticata"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LoginSecondaryTextStyle"
                android:layout_marginBottom="0dp"
                android:text="@string/Nessun_account"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/iscriviti"
                style="@style/LoginPrimaryTextStyle"
                android:layout_marginBottom="@dimen/default_large_margin_or_padding"
                android:background="?attr/selectableItemBackground"
                android:paddingBottom="@dimen/default_small_margin_or_padding"
                android:paddingLeft="@dimen/default_margin_or_padding"
                android:paddingRight="@dimen/default_margin_or_padding"
                android:paddingTop="@dimen/default_small_margin_or_padding"
                android:text="@string/Iscriviti_ora"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>